# glsl-lang

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  README.tpl  cog.toml  crates.js  help.html  renovate.json  rust-toolchain.toml  search-index.js  settings.html  source-files.js  src-files.js
ci/: bumpver.sh  readme.sh  release.sh  vars
data/: range_order.frag  validate-shaders.sh
fuzz/: .gitignore  Cargo.toml  README.md  fuzz.sh
fuzz/in/: cppSimple.vert  preprocessor.bad_arg.vert  preprocessor.cpp_style___FILE__.vert  preprocessor.cpp_style_line_directive.vert  preprocessor.defined.vert  preprocessor.edge_cases.vert  preprocessor.eof_missing.vert  preprocessor.errors.vert  preprocessor.extensions.vert  preprocessor.function_macro.vert  preprocessor.include.disabled.vert  preprocessor.include.enabled.vert  preprocessor.line.frag  preprocessor.line.vert  preprocessor.many.endif.vert  preprocessor.pragma.vert  preprocessor.simple.vert  preprocessor.success_if_parse_would_fail.vert
fuzz/in/lang/: 100.frag  100Limits.vert  100samplerExternal.frag  100scope.vert  110scope.vert  120.frag  120.vert  130.frag  130.vert  140.frag  140.vert  150.frag  150.geom  150.tesc  150.tese  150.vert  300.frag  300.vert  300BuiltIns.frag  300block.frag  300layout.frag  300layout.vert  300link.frag  300link2.frag  300link3.frag  300operations.frag  300samplerExternal.frag  300samplerExternalYUV.frag  300scope.vert  310.comp  310.frag  310.geom  310.inheritMemory.frag  310.tesc  310.tese  310.vert  310AofA.vert  310implicitSizeArrayError.vert  310runtimeArray.vert  320.comp  (+306 more)
fuzz/in/pp/: cppBad2.vert  cppBad4.vert  cppBad5.vert  cppComplexExpr.vert  cppDeepNest.frag  cppIntMinOverNegativeOne.frag  cppNest.vert  cppRelaxSkipTokensErrors.vert  preprocessor.cpp_style___FILE__.vert  preprocessor.cpp_style_line_directive.vert  preprocessor.defined.vert  preprocessor.edge_cases.vert  preprocessor.eof_missing.vert  preprocessor.extensions.vert  preprocessor.function_macro.vert  preprocessor.include.disabled.vert  preprocessor.line.frag  preprocessor.line.vert  preprocessor.simple.vert  preprocessor.success_if_parse_would_fail.vert
fuzz/src/: lib.rs  main.rs
glsl_lang/: all.html  index.html  sidebar-items.js
glsl_lang_cli/: all.html  fn.main.html  fn.output_glsl.html  fn.output_json.html  fn.output_text.html  fn.parse_tu.html  index.html  sidebar-items.js  struct.Opts.html  struct.ParseError.html
glsl_lang_lexer/: all.html  enum.IdentifierContext.html  enum.Token.html  index.html  sidebar-items.js  struct.GlslTypeTablePolicy.html  struct.ParseContext.html  struct.ParseContextData.html  struct.ParseOptions.html  trait.HasLexerError.html  trait.LangLexer.html  trait.LangLexerIterator.html  trait.TypeTablePolicy.html  type.CommentList.html
glsl_lang_pp/: all.html  index.html  macro.ext_name!.html  macro.ext_name.html  macro.keyword.html  macro.type_name!.html  macro.type_name.html  sidebar-items.js
glsl_lang_quote/: all.html  fn.glsl_internal.html  index.html  macro.glsl!.html  macro.glsl.html  macro.glsl_expr!.html  macro.glsl_expr.html  macro.glsl_statement!.html  macro.glsl_statement.html  sidebar-items.js  static._DECLS.html
glsl_lang_types/: all.html  index.html  sidebar-items.js
lang/: Cargo.toml  README.md
lang-cli/: Cargo.toml  README.md  README.tpl
lang-cli/src/: main.rs
lang-impl/: Cargo.toml
lang-lexer/: Cargo.toml  README.md
lang-lexer/src/: context.rs  full.rs  lang_token.rs  lib.rs  min.rs  token.rs  v1.rs  v2.rs  v2_full.rs  v2_min.rs
lang-lexer/src/full/: core.rs  directives.rs  str.rs
lang-lexer/src/min/: str.rs
lang-lexer/src/v1/: parsers.rs  preprocessor_token.rs  tests.rs
lang-lexer/src/v2/: core.rs  fs.rs  str.rs
lang-lexer/src/v2_full/: core.rs  directives.rs  fs.rs  str.rs
lang-lexer/src/v2_min/: str.rs
lang-pp/: Cargo.toml  README.md  build.rs
lang-pp/src/: exts.rs  input.rs  last.rs  lexer.rs  lib.rs  parser.rs  processor.rs  types.rs  util.rs
lang-pp/src/exts/: names.rs
lang-pp/src/last/: fs.rs  keywords.rs  str.rs  token.rs  type_names.rs
lang-pp/src/lexer/: glue.rs  line_map.rs  newline.rs  pre.rs  tests.rs
lang-pp/src/lexer/glue/: token.rs
lang-pp/src/lexer/pre/: token.rs
lang-pp/src/parser/: ast.rs  error.rs  lang.rs  syntax.rs  syntax_kind.rs  tests.rs
lang-pp/src/processor/: definition.rs  event.rs  expand.rs  expr.rs  fs.rs  nodes.rs  str.rs
lang-pp/src/processor/event/: send.rs
lang-pp/src/processor/expand/: if_stack.rs
lang-pp/src/types/: path.rs  token.rs  type_names.rs
lang-pp/src/util/: line_map.rs  located.rs  text_token.rs  unescaped.rs
lang-pp/tests/: additional.rs  issue_61.glsl  main.rs
lang-pp/tests/common/: mod.rs
lang-quote/: Cargo.toml  README.md
lang-quote/src/: lib.rs  quoted.rs  tokenize.rs
lang-quote/tests/: lib.rs
lang-types/: Cargo.toml  README.md
lang-types/src/: ast.rs
lang-util/: Cargo.toml  README.md
lang-util-derive/: Cargo.toml  README.md
lang-util-derive/src/: content_display.rs  content_eq.rs  lib.rs  node_content.rs  node_display.rs  token.rs
lang-util-derive/src/node_content/: content_display.rs
lang-util-dev/: Cargo.toml  README.md
lang-util-dev/src/: lib.rs  test_util.rs
lang-util/src/: error.rs  file_id.rs  lib.rs  located.rs  node.rs  position.rs  token.rs
lang-util/src/node/: content.rs  display.rs
lang/benches/: glsl.rs
lang/data/tests/: buffer_block_0.glsl  layout_buffer_block_0.glsl  multifile_pp_a.glsl  multifile_pp_b.glsl  pos_error_a.glsl  pos_error_b.glsl  range_order.glsl  vulkan_types.glsl
lang/src/: ast.rs  lexer.rs  lib.rs  parse.rs  parse_tests.rs  parser.lalrpop  visitor.rs
lang/src/ast/: display.rs  node.rs
lang/src/lexer/: comments.rs  parsers.rs  preprocessor_token.rs  tests.rs  token.rs  type_names.rs  v1.rs  v2.rs
lang/src/lexer/v1/: parsers.rs  preprocessor_token.rs  tests.rs
lang/src/lexer/v2/: core.rs  fs.rs  str.rs
lang/src/parse/: builder.rs  context.rs  parsable.rs
lang/src/transpiler/: glsl.rs
lang/tests/: pos_error.rs  range_order.rs
lang/tests/common/: mod.rs
(+4312 files in other folders)
