[workspace]
default-members = [
	"lang",
	"lang-pp",
	"lang-util",
	"lang-util-derive",
	"lang-quote",
	"lang-cli",
]

members = [
	"fuzz",
	"lang",
	"lang-pp",
	"lang-util",
	"lang-util-derive",
	"lang-quote",
	"lang-cli",
	"xtask",
]

[patch.crates-io]
glsl-lang       = { path = "lang" }
glsl-lang-pp    = { path = "lang-pp" }
glsl-lang-quote = { path = "lang-quote" }
glsl-lang-cli   = { path = "lang-cli" }

lang-util        = { path = "lang-util" }
lang-util-derive = { path = "lang-util-derive" }

lalrpop      = { git = "https://github.com/vtavernier/lalrpop", branch = "fix/573" }
lalrpop-util = { git = "https://github.com/vtavernier/lalrpop", branch = "fix/573" }

[profile.dev.build-override]
opt-level = 2

[profile.release.build-override]
opt-level = 2
