[workspace]
default-members = [
	"lang",
	"lang-pp",
	"lang-lexer",
	"lang-types",
	"lang-util",
	"lang-util-derive",
	"lang-util-dev",
	"lang-quote",
	"lang-cli",
]

members = [
	"lang",
	"lang-pp",
	"lang-lexer",
	"lang-types",
	"lang-util",
	"lang-util-derive",
	"lang-util-dev",
	"lang-quote",
	"lang-cli",
	"xtask",
]

[patch.crates-io]
glsl-lang       = { path = "lang" }
glsl-lang-pp    = { path = "lang-pp" }
glsl-lang-lexer = { path = "lang-lexer" }
glsl-lang-types = { path = "lang-types" }
glsl-lang-quote = { path = "lang-quote" }
glsl-lang-cli   = { path = "lang-cli" }

lang-util        = { path = "lang-util" }
lang-util-derive = { path = "lang-util-derive" }
lang-util-dev    = { path = "lang-util-dev" }

[profile.dev.build-override]
opt-level = 2

[profile.release.build-override]
opt-level = 2
