[package]
name = "glsl-lang-cli"
version = "0.5.1"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "CLI for the glsl-lang crate"
homepage = "https://github.com/vtavernier/glsl-lang"
documentation = "https://docs.rs/glsl-lang-cli/"
repository = "https://github.com/vtavernier/glsl-lang"
readme = "README.md"
keywords = ["glsl", "language", "parser", "ast", "cli"]
categories = ["command-line-interface", "parser-implementations", "rendering"]

[dependencies]
glsl-lang = { version = "=0.5.1", features = ["lexer-v2-full"] }
glsl-lang-pp = { version = "=0.5.1" }
lang-util = "=0.5.1"
argh = "0.1"

serde_json = { version = "1.0", optional = true }
miette = { version = "4.7", features = ["fancy"] }
thiserror = "1.0"

[features]
default = ["json"]
json = ["serde_json", "glsl-lang/serde"]
