[package]
name = "glsl-lang-lexer"
version = "0.7.2"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2021"
license = "BSD-3-Clause"
description = "GLSL language lexers"
homepage = "https://github.com/alixinne/glsl-lang"
documentation = "https://docs.rs/glsl-lang-lexer/"
repository = "https://github.com/alixinne/glsl-lang"
readme = "README.md"
keywords = ["glsl", "language", "parser"]
categories = ["parser-implementations", "rendering"]

[dependencies]
glsl-lang-types = "=0.7.2"
lang-util = { version = "=0.7.2", features = ["lalrpop"] }

thiserror = "2.0"

rserde = { version = "1.0", optional = true, features = ["derive"], package = "serde" }

# v1 lexer dependencies
logos = { version = "0.12", optional = true }

# v2 lexer dependencies
glsl-lang-pp = { version = "=0.7.2", optional = true }
lalrpop-util = { version = "0.20.0", default-features = false, optional = true }

[features]
default = []
v1 = ["logos", "lalrpop"]
v2-min = ["glsl-lang-pp", "lalrpop"]
v2-full = ["glsl-lang-pp/full", "lalrpop"]
lalrpop = ["lalrpop-util"]

# AST Serialization
serde = ["rserde", "glsl-lang-types/serde", "lang-util/serde"]
