[package]
name = "glsl-lang-lexer"
version = "0.8.1"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2021"
license = "BSD-3-Clause"
description = "GLSL language lexers"
homepage = "https://github.com/alixinne/glsl-lang"
documentation = "https://docs.rs/glsl-lang-lexer/"
repository = "https://github.com/alixinne/glsl-lang"
readme = "README.md"
keywords = ["glsl", "language", "parser"]
categories = ["parser-implementations", "rendering"]
rust-version = "1.82.0"

[dependencies]
glsl-lang-pp = "=0.8.1"
glsl-lang-types = "=0.8.1"
lang-util = { version = "=0.8.1", features = ["lalrpop"] }

thiserror = "2.0"

rserde = { version = "1.0", optional = true, features = ["derive"], package = "serde" }

lalrpop-util = { version = "0.22.1", default-features = false }

[features]
full = ["glsl-lang-pp/full"]

# AST Serialization
serde = ["rserde", "glsl-lang-types/serde", "lang-util/serde"]
