[package]
name = "glsl-lang-pp"
version = "0.2.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "GLSL language preprocessor"
homepage = "https://github.com/vtavernier/glsl-lang"
documentation = "https://docs.rs/glsl-lang/"
repository = "https://github.com/vtavernier/glsl-lang"
readme = "README.md"
keywords = ["glsl", "language", "preprocessor"]
categories = ["parser-implementations", "rendering"]
build = "build.rs"

[dependencies]
lang-util = "0.2.0"

rowan = "0.12"
smol_str = "0.1"
cbitset = "0.2"
static_assertions = "1.1"
string_cache = "0.8"
thiserror = "1.0"
lexical = "5.2"
arrayvec = "0.7"
derive_more = "0.99"
encoding_rs = "0.8"
bimap = "0.6"
itertools = "0.10"
lazy_static = "1.4"

[dev-dependencies]
expect-test = "1.1"
encoding_rs = "0.8"

[build-dependencies]
string_cache_codegen = "0.5"
