[package]
name = "glsl-lang-pp"
version = "0.2.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "GLSL language preprocessor"
homepage = "https://github.com/vtavernier/glsl-lang"
documentation = "https://docs.rs/glsl-lang/"
repository = "https://github.com/vtavernier/glsl-lang"
readme = "README.md"
keywords = ["glsl", "language", "preprocessor"]
categories = ["parser-implementations", "rendering"]
build = "build.rs"

[dependencies]
lang-util = "0.2.0"

string_cache = "0.8"
thiserror = "1.0"
lexical = "5.2"
arrayvec = "0.7"
derive_more = "0.99"

# Preprocessor
rowan = { version = "0.12", optional = true }
cbitset = { version = "0.2", optional = true }
static_assertions = { version = "1.1", optional = true }
bimap = { version = "0.6", optional = true }
itertools = { version = "0.10", optional = true }

# Extension registry
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
lang-util-dev = "0.2.0"

expect-test = "1.1"
encoding_rs = "0.8"

[build-dependencies]
string_cache_codegen = "0.5"

[features]
default = []
exts = ["lazy_static"]
full = ["exts", "rowan", "cbitset", "static_assertions", "bimap", "itertools"]
