[package]
name = "glsl-lang-quote"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
glsl-lang = "=0.1.0"
proc-macro2 = "1"
quote = "1"

[features]
# Default: only translation units can be quoted
default = ["quote-parsable"]

# Additional sub-quotes. Increases compilation time.
quote-expr = ["glsl-lang/parser-expr"]
quote-preprocessor = ["glsl-lang/parser-preprocessor"]
quote-statement = ["glsl-lang/parser-statement"]

# Allow parsing quoted expressions with parseable
quote-parsable = []
