[package]
name = "lang-util-derive"
version = "0.2.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "proc-macros for lang-util"
homepage = "https://github.com/vtavernier/glsl-lang"
documentation = "https://docs.rs/lang-util-derive/"
repository = "https://github.com/vtavernier/glsl-lang"
readme = "README.md"
keywords = ["language", "parser", "ast", "macro"]
categories = ["parsing"]

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = "0.12"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
