[package]
name = "lang-util"
version = "0.1.2"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Utilities for implementing parsers and ASTs using lalrpop and Logos"
homepage = "https://github.com/vtavernier/glsl-lang"
documentation = "https://docs.rs/lang-util/"
repository = "https://github.com/vtavernier/glsl-lang"
readme = "README.md"
keywords = ["language", "parser", "ast"]
categories = ["parsing"]

[dependencies]
lalrpop-util = { version = "0.19", default-features = false }
lang-util-derive = "0.1.2"
line-span = "0.1"
parse-display = { version = "0.4", default-features = false, features = ["std"] }
smol_str = "0.1"
