[package]
name = "lang-util"
version = "0.2.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Utilities for implementing parsers and ASTs using lalrpop and Logos"
homepage = "https://github.com/vtavernier/glsl-lang"
documentation = "https://docs.rs/lang-util/"
repository = "https://github.com/vtavernier/glsl-lang"
readme = "README.md"
keywords = ["language", "parser", "ast"]
categories = ["parsing"]

[dependencies]
lang-util-derive = "0.2.0"
line-span = "0.1"
smol_str = "0.1"
text-size = "1.1"
derive_more = "0.99"

# lalrpop dependencies
lalrpop-util = { version = "0.19", default-features = false, optional = true }

rserde = { version = "1.0", optional = true, features = ["derive"], package = "serde" }

[features]
default = []

lalrpop = ["lalrpop-util"]

serde = ["rserde", "smol_str/serde", "text-size/serde"]
