[package]
name = "lang-util"
version = "0.7.2"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Utilities for implementing parsers and ASTs using lalrpop and Logos"
homepage = "https://github.com/alixinne/glsl-lang"
documentation = "https://docs.rs/lang-util/"
repository = "https://github.com/alixinne/glsl-lang"
readme = "README.md"
keywords = ["language", "parser", "ast"]
categories = ["parsing"]
rust-version = "1.82.0"

[dependencies]
lang-util-derive = "=0.7.2"
line-span = "0.1"
smol_str = "0.2"
text-size = "1.1"
derive_more = { version = "2.0", features = ["display", "from"] }

# lalrpop dependencies
lalrpop-util = { version = "0.20.0", default-features = false, optional = true }

rserde = { version = "1.0", optional = true, features = ["derive"], package = "serde" }

[features]
default = []

lalrpop = ["lalrpop-util"]

serde = ["rserde", "smol_str/serde", "text-size/serde"]
